# cmake-vcpkg-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
.github/workflows/: cmake-build-multi-platform.yml
scripts/: bootstrap-workspace.bat  bootstrap-workspace.sh
